gitops/components/traefik/argocd-route.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`observability.isis.cclrc.ac.uk`) && PathPrefix(`/argocd`)
      services:
        - name: argocd-server
          port: 80
  tls:
    secretName: observability-isis-tls
